Remove z-index to fix UserPage bug

--- a/client/homebrew/navbar/navbar.less
+++ b/client/homebrew/navbar/navbar.less
@@ -85,7 +85,6 @@
 	}
 	.recent.navItem {
 		position : relative;
-		z-index  : 2;
 		.dropdown{
 			position   : absolute;
 			top        : 28px;
