--- a/shared/naturalcrit/nav/nav.less
+++ b/shared/naturalcrit/nav/nav.less
@@ -72,7 +72,6 @@ nav{
 	}
 	.navDropdownContainer{
 		position: relative;
-		z-index: 2;
 		.navDropdown {
 			position : absolute;
 			top      : 28px;
